# the-basketball-sfml

./: .gitignore  CMakeLists.txt  GenerateVisualStudioSolution.bat  LICENSE  README.md  SetupEnvironment.bat  vcpkg.json
.github/workflows/: build-windows.yml  build.yml
src/Private/: Actor.cpp  ActorBuilder.cpp  ActorContactListener.cpp  ActorPhysicComponent.cpp  ActorRenderComponent.cpp  Application.cpp  AssetLoader.cpp  GameInput.cpp  GameLogic.cpp  GameState.cpp  TextProcessor.cpp  TextRenderer.cpp  TextWidget.cpp  TextWidgetBuilder.cpp  TextWidgetProcessor.cpp  TickHandle.cpp  b2Actor2D.cpp  b2Actor2DContactListener.cpp  main.cpp
src/Public/: Actor.h  ActorBuilder.h  ActorContactListener.h  ActorPhysicComponent.h  ActorRenderComponent.h  Application.h  AssetLoader.h  Box2DHelper.h  Defines.h  GameInput.h  GameLogic.h  GameState.h  Interface.h  TextProcessor.h  TextRenderer.h  TextWidget.h  TextWidgetBuilder.h  TextWidgetProcessor.h  TickHandle.h  b2Actor2D.h  b2Actor2DContactListener.h
